egyptian hieroglyphs are not displayed anymore since last update
Categories
(Core :: Layout: Text and Fonts, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox87 | --- | wontfix |
| firefox88 | --- | wontfix |
| firefox89 | --- | fixed |
People
(Reporter: paris, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:87.0) Gecko/20100101 Firefox/87.0
Steps to reproduce:
i updated firefox
Actual results:
Egyptian Hieroglyphs are not displayed afterwards
Expected results:
Egyptian Hieroglyphs should still be display as before
with the last update firefox can not display egyptian hieroglyphs anymore.
check here:
http://www.alanwood.net/unicode/egyptian-hieroglyphs.html
it worked fine with older versions before 87.
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
It works for me on macOS 11.0. I think this must be a version-specific issue; there are differences between macOS versions regarding how the installed fonts are handled.
I guess bug 1690877 and/or bug 1691719 may be the culprit here. Some experimentation will be needed to pin down exactly what's wrong...
screen of system info with Firefox version 86 and 87 with 𓆏 (U+1318F) to make the problem visible
| Assignee | ||
Comment 4•4 years ago
|
||
I'm fairly sure this must be a regression from bug 1690877; hoping to confirm this shortly. It affects macOS 10.13 but not 11.0; it would be helpful to know about intermediate versions so that we can target a fix correctly. I'll see if we can get help from QA to confirm exactly what versions are affected.
Updated•4 years ago
|
Updated•4 years ago
|
Comment 5•4 years ago
|
||
macOS 10.15 is OK
Comment 6•4 years ago
|
||
I can confirm that this issue is reproducible on: macOS 10.13 & 10.14.
This issue is not reproducible on: macOS 10.15 & 11.3
| Assignee | ||
Comment 7•4 years ago
|
||
Thanks Emil - really appreciate your help here.
| Assignee | ||
Comment 8•4 years ago
|
||
Updated•4 years ago
|
Comment 9•4 years ago
|
||
Set release status flags based on info from the regressing bug 1690877
Updated•4 years ago
|
Updated•4 years ago
|
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Description
•