Bug 1704273 - Activate supplemental fonts in all processes on older versions of macOS. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D111603